crates/flotilla-tui/tests/snapshots/snapshots__delete_confirm_with_uncommitted_files.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  |  🚢  convoys  | my-project ×  | [+]
                                                                    ⚙   ┌ Preview ─────────────────────────────────────┐
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                        ┌ Remove Worktree ─────────────────────────────────────────────────────┐                       │
                        │Branch: feat-wip                                                      │                       │
                        │                                                                      │                       │
                        │PR: OPEN                                                              │                       │
                        │                                                                      │                       │
                        │⚠ 3 uncommitted file(s):                                              │                       │
                        │M src/main.rs                                                         │                       │
                        │M src/lib.rs                                                          │                       │
                        │?? TODO.txt                                                           │                       │
                        │⚠ 1 unpushed commit(s):                                               │                       │
                        │abc1234 work in progress                                              │                       │
                        │                                                                      │                       │
                        │y/Enter: confirm    n/Esc: cancel                                     │                       │
                        │                                                                      │                       │
                        └──────────────────────────────────────────────────────────────────────┘                       │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        └──────────────────────────────────────────────┘
CONFIRM DELETE               <y> YES  <n> NO 
