crates/flotilla-tui/tests/snapshots/snapshots__file_picker_popup.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  |  🚢  convoys  | my-project ×  | [+]
                                                                    ⚙   ┌ Preview ─────────────────────────────────────┐
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                        ┌ Add Repository ──────────────────────────────────────────────────────┐                       │
                        │> /test                                                               │                       │
                        │    repo-a (git repo)                                                 │                       │
                        │▸   repo-b (added)                                                    │                       │
                        │    notes.txt                                                         │                       │
                        │                                                                      │                       │
                        │                                                                      │                       │
                        │                                                                      │                       │
                        │                                                                      │                       │
                        │                                                                      │                       │
                        │                                                                      │                       │
                        │                                                                      │                       │
                        │                                                                      │                       │
                        │                                                                      │                       │
                        │                                                                      │                       │
                        │                                                                      │                       │
                        │                                                                      │                       │
                        └──────────────────────────────────────────────────────────────────────┘                       │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        └──────────────────────────────────────────────┘
ADD REPO                     <ENT> SELECT  <ESC> CANCEL  <TAB> COMPLETE 
