crates/flotilla-tui/tests/snapshots/snapshots__hidden_preview_uses_full_content_area.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
assertion_line: 178
expression: output
---
 ⚓  flotilla  | my-project | [+]
┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────── ⚙ ┐
│      Source     Path              Description                        Branch            WT  WS  PR   SS   Issues Git  │
│      ── Checkouts ──                                                                                                 │
│▸  ○                   feat-dashbo checkout feat-dashboard            feat-dashboard    ✓                             │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 enter:open  d:remove worktree  v:preview  P:hide  preview:hidden  .:menu  /:search  n:new  r:refresh  space:select  ?:h
