crates/flotilla-tui/tests/snapshots/snapshots__preview_change_request.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  |  🚢  convoys  | my-project ×  | [+]
── Pull Requests ────────────────────────────────────────────────── ⚙   ┌ Preview ─────────────────────────────────────┐
      PR#    Title                      Branch         State    Issues  │Description: Refactor auth module             │
▸  ⊙  #77    Refactor auth module       feat-auth      open             │Branch: feat-auth                             │
                                                                        │PR #77: Refactor auth module                  │
                                                                        │State: Open                                   │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        └──────────────────────────────────────────────┘
: for commands               <q> QUIT  <h> HELP  <?> CTX  <:> COMMANDS  </> FIND              ◫ auto   @local
