crates/flotilla-tui/tests/snapshots/snapshots__preview_session.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  |  🚢  convoys  | my-project ×  | [+]
── Sessions ─────────────────────────────────────────────────────── ⚙   ┌ Preview ─────────────────────────────────────┐
      Source     Key         Description            Branch      Status  │Description: Debug API endpoints              │
▸  ▶             s5          Debug API endpoints    feat/sessi… ▶       │Branch: feat/session-branch                   │
                                                                        │Session: Debug API endpoints                  │
                                                                        │Id: s5                                        │
                                                                        │Status: Running                               │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        └──────────────────────────────────────────────┘
: for commands               <q> QUIT  <h> HELP  <?> CTX  <:> COMMANDS  </> FIND              ◫ auto   @local
