crates/flotilla-tui/tests/snapshots/snapshots__providers_overlay.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  |  🚢  convoys  | my-project ×  | [+]
┌─────────────────────────────────────────────────────────────────── ✕ ┐┌ Preview ─────────────────────────────────────┐
│Role             Provider                 Status                      ││                                              │
│VCS              Git                                                  ││                                              │
│Checkout mgr     Git Worktrees                                        ││                                              │
│Change request   GitHub                   ✗                           ││                                              │
│Issue tracker    —                                                    ││                                              │
│Cloud agents     Claude                   ✓                           ││                                              │
│AI utility       —                                                    ││                                              │
│Workspace mgr    —                                                    ││                                              │
│Terminal pool    —                                                    ││                                              │
│Environment      —                                                    ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
PROVIDERS                    <q> QUIT  <h> HELP  <?> CTX  <ENT> OPEN  <.> MENU  <n> NEW     ◫ auto   @local
