crates/flotilla-tui/tests/snapshots/snapshots__selected_item_preview.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  |  🚢  convoys  | my-project ×  | [+]
── Checkouts ────────────────────────────────────────────────────── ⚙   ┌ Preview ─────────────────────────────────────┐
      Source     Path  Description Branch WT  WS  PR   SS   Issues Git  │Description: checkout feat-dashboard          │
▸  ○               fe… checkout f… feat-… ✓                             │Branch: feat-dashboard                        │
── Pull Requests ─────────────────────────────────────────────────────  │Path: /test/my-project/feat-dashboard         │
      PR#    Title                      Branch         State    Issues  │                                              │
   ⊙  #99    Build analytics dashboard  feat-dashboard open             │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        └──────────────────────────────────────────────┘
/ for commands               <q> QUIT  <h> HELP  <?> CTX  <ENT> OPEN  <.> MENU  <n> NEW     ◫ auto   @local
